--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,36 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1.2;
+}
+
+p {
+  font-weight: 500;
+  line-height: 1.5em;
+}
+
+button {
+  padding: 1rem 0.5rem;
+  background-color: none;
+  border: 1px #666 solid;
+}
+
+button:hover {
+  transform: translateY(-2px);
+}
+
+input[type="text"] {
+  padding: 0.6rem;
+  border-radius: 5px;
+  transition: 0.3s ease-in-out;
+}
+
+input:focus {
+  outline: 0;
+  background-color: rgb(235, 235, 235);
+}
