--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,9 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.2;
 }
+::placeholder {
+  color: rgba(0, 0, 0, 0.23);
+}
 
 p {
   font-weight: 500;
@@ -15,19 +18,21 @@ p {
 }
 
 button {
-  padding: 1rem 0.5rem;
-  background-color: none;
+  cursor: pointer;
+  padding: 0.5rem;
+  background: none;
   border: 1px #666 solid;
+  transition: all 0.3s ease-in;
 }
 
 button:hover {
   transform: translateY(-2px);
 }
 
-input[type="text"] {
+input {
   padding: 0.6rem;
-  border-radius: 5px;
-  transition: 0.3s ease-in-out;
+  width: 200px;
+  transition: all 0.3s ease-out;
 }
 
 input:focus {
