--- a/src/app/components/modal/modal.component.css
+++ b/src/app/components/modal/modal.component.css
@@ -26,13 +26,24 @@
 }
 
 .modal-container > form > input {
+  border: none;
+  border-bottom: 1px rgba(51, 51, 51, 0.521) solid;
   margin-bottom: 1em;
   padding: 0.5rem;
+}
+.modal-container > form > input:focus {
+  width: 80%;
 }
 
 .modal-container h3 {
   margin-bottom: 1em;
 }
 .modal-container > form > label {
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
+}
+
+#open-modal-btn {
+  position: fixed;
+  bottom: 5px;
+  left: 5px;
 }
