--- a/src/app/components/search/search.component.css
+++ b/src/app/components/search/search.component.css
@@ -2,6 +2,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
   background-color: #333;
   color: white;
   padding: 1rem;
@@ -14,4 +15,14 @@ header form {
 
 header form > * {
   margin: 0 10px;
+}
+
+@media (max-width: 936px) {
+  header {
+    justify-content: center;
+    align-content: space-around;
+  }
+  h1 {
+    margin-bottom: 1rem;
+  }
 }
